Fix display card on Firefox and try fix article's links

--- a/src/components/AboutUsCard/about-us-card.scss
+++ b/src/components/AboutUsCard/about-us-card.scss
@@ -1,5 +1,4 @@
 @import '../../styles/base/settings';
-;
 .about-us__card__wrapper {
   display: grid;
   grid-template-columns: 10% 80% 10%;
@@ -17,7 +16,7 @@
   justify-self: center;
   object-fit: cover;
   width: 100%;
-  height: 100%;
+
   border-radius: $spacing;
   margin: 0;
   grid-column: 2;
