--- a/src/components/CardWithThumbnail/card-with-thumbnail.scss
+++ b/src/components/CardWithThumbnail/card-with-thumbnail.scss
@@ -14,7 +14,6 @@
 }
 .partners__thumbnail,
 .sensors__thumbnail {
-  height: 100%;
   width: 100%;
   max-width: 150px;
   align-self: center;
