--- a/src/pages/LandingPage/landing-page-card.scss
+++ b/src/pages/LandingPage/landing-page-card.scss
@@ -6,7 +6,6 @@
 }
 .landing-page__card {
   width: 100%;
-  height: 100%;
 }
 .landing-page__description {
   margin: 0;
